# memcan

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  LESSONS_LEARNED.md  LICENSE  README.md  SETUP.md  audit.toml  docker-compose.yml  setup.sh
.claude/: settings.json
.claude-plugin/: .mcp.json  plugin.json
.claude/skills/release/: SKILL.md
.claude/skills/smoke-test/: SKILL.md
.github/workflows/: cargo-publish.yml  ci.yml  docker.yml  notify-marketplace.yml  release.yml
claude-plugin/: .mcp.json  setup.sh
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
claude-plugin/mcp-server/: pyproject.toml
claude-plugin/mcp-server/src/mindajo_mcp/: config.py
claude-plugin/mcp-server/src/mindojo_mcp/: __init__.py  config.py  extract_learnings.py  memory_pipeline.py  qdrant_utils.py  server.py
claude-plugin/mcp-server/src/mindojo_mcp/prompts/: __init__.py  fact-extraction.md
claude-plugin/mcp-server/tests/: test_config.py  test_config_env_discovery.py  test_extract_learnings.py  test_index_code.py  test_index_standards.py  test_memory_tools.py  test_ollama_integration.py  test_qdrant_utils.py  test_search_tools.py  test_server.py
claude-plugin/skills/lessons-learned/: SKILL.md
claude-plugin/skills/list-collections/: SKILL.md
claude-plugin/skills/persistent-memory/: SKILL.md
claude-plugin/skills/recall/: SKILL.md
claude-plugin/skills/remember/: SKILL.md
claude-plugin/skills/search-code/: SKILL.md
claude-plugin/skills/search-standards/: SKILL.md
claude-plugin/skills/setup-ai-brain/: SKILL.md
claude-plugin/skills/setup-memcan/: SKILL.md
claude-plugin/skills/setup-mindajo/: SKILL.md
claude-plugin/skills/setup-mindojo/: SKILL.md
hooks/: hooks.json
mcp-server/: pyproject.toml
mcp-server/src/ai_brain_mcp/: __init__.py  config.py  server.py
mcp-server/src/mindajo_mcp/: __init__.py  config.py  server.py
rs/memcan/: Cargo.toml  README.md
rs/memcan-cli/: Cargo.toml
rs/memcan-cli/src/: main.rs
rs/memcan-core/: Cargo.toml
rs/memcan-core/benches/: embed_bench.rs
rs/memcan-core/src/: config.rs  embed.rs  error.rs  health.rs  indexing.rs  init.rs  lancedb_store.rs  lib.rs  llm.rs  llm_ollama_rs.rs  ollama.rs  pipeline.rs  prompts.rs  query.rs  schema.rs  search.rs  todo.rs  traits.rs  typed_table.rs
rs/memcan-core/src/indexing/: code.rs  standards.rs
rs/memcan-core/src/prompts/: README.md  code-description.md  fact-extraction-hook.md  fact-extraction.md  memory-update.md  metadata-extraction.md
rs/memcan-core/tests/: config_test.rs  embed_perf_test.rs  integration_test.rs  ollama_integration.rs
rs/memcan-core/tests/fixtures/: hook-extraction-accept.jsonl  hook-extraction-reject.jsonl  hook-test-vectors.jsonl
rs/memcan-server/: Cargo.toml  build.rs
rs/memcan-server/src/: import_triaged.rs  index_code.rs  index_standards.rs  main.rs  migrate.rs  purge_memories.rs  serve.rs  test_classification.rs
rs/memcan/src/: client.rs  extract.rs  main.rs
rs/mindojo-cli/: Cargo.toml
rs/mindojo-cli/src/: client.rs  extract.rs  main.rs
rs/mindojo-core/: Cargo.toml
rs/mindojo-core/benches/: embed_bench.rs
rs/mindojo-core/src/: config.rs  embed.rs  error.rs  init.rs  lancedb_store.rs  lib.rs  llm.rs  ollama.rs  pipeline.rs  prompts.rs  traits.rs
rs/mindojo-core/tests/: config_test.rs  embed_perf_test.rs  integration_test.rs  mock_ollama_test.rs
rs/mindojo-extract/: Cargo.toml
rs/mindojo-extract/src/: main.rs
rs/mindojo-import-triaged/: Cargo.toml
rs/mindojo-import-triaged/src/: main.rs
rs/mindojo-index-code/: Cargo.toml
rs/mindojo-index-code/src/: main.rs
rs/mindojo-index-standards/: Cargo.toml
rs/mindojo-index-standards/src/: main.rs
rs/mindojo-mcp/: Cargo.toml
rs/mindojo-mcp/src/: main.rs
rs/mindojo-migrate/: Cargo.toml
rs/mindojo-migrate/src/: main.rs
rs/mindojo-server/: Cargo.toml  build.rs
rs/mindojo-server/src/: import_triaged.rs  index_code.rs  index_standards.rs  main.rs  migrate.rs  serve.rs  test_classification.rs
rs/mindojo-test-classification/: Cargo.toml
rs/mindojo-test-classification/src/: main.rs
scripts/: generate_import_report.py  import_triaged.py  index-code.py  index-owasp.sh  index-standards.py  index-standards.sh  migrate-collection.py  setup-ubuntu.sh  test-concurrent-qwen.py  test_classification.py
skills/lessons-learned/: SKILL.md
skills/recall/: SKILL.md
skills/release/: SKILL.md
skills/remember/: SKILL.md
skills/setup-memcan/: SKILL.md
skills/todo/: SKILL.md
