[workspace]
resolver = "2"
members = [
    "rs/memcan-core",
    "rs/memcan-server",
    "rs/memcan",
]

[workspace.package]
version = "0.30.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/lklimek/memcan"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
sha2 = "0.10"
dotenvy = "0.15"
dirs = "6"

# Async
async-trait = "0.1"
futures = "0.3"

# Embeddings (in-process ONNX, text models only — no image-models)
fastembed = { version = "5", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries-native-tls"] }

# Multi-provider LLM
genai = "0.5"

# HTTP (used by memcan-test-classification)
reqwest = { version = "0.13", features = ["json"] }

# Vector DB
lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"

# MCP
rmcp = { version = "1.1", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "0.8"

# HTTP server
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }

# Crypto
subtle = "2"

# CLI
clap_complete = "4"

# Caching
lru = "0.16"

# Regex
regex = "1"

# Testing
mockito = "1"
tempfile = "3"
serial_test = "3"

[profile.dev.package."*"]
debug = "line-tables-only"

[profile.release]
strip = true
lto = "thin"
