[project]
name = "mindojo-mcp"
version = "0.1.0"
description = "MCP server for persistent memory via mem0"
requires-python = ">=3.11"
dependencies = [
    "mem0ai>=0.1.30,<2.0",
    "mcp[cli]>=1.0",
    "ollama>=0.4",
    "pydantic-settings>=2.0",
    "platformdirs>=4.9.2",
    "qdrant-client>=1.7",
]

[project.scripts]
mindojo-mcp = "mindojo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindojo_mcp"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
    "tree-sitter>=0.24",
    "tree-sitter-language-pack>=0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live Ollama + Qdrant",
    "benchmark: slow performance benchmarks, run with -m benchmark",
    "mcp_roundtrip: async MCP roundtrip tests, run with -m mcp_roundtrip",
]
addopts = "-m 'not benchmark and not mcp_roundtrip'"
