[package]
name = "memcan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
md-5 = { workspace = true }
dotenvy = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
fastembed = { workspace = true }
genai = { workspace = true }
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
reqwest = { workspace = true }
handlebars = "6"
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros"] }
serial_test = { workspace = true }

[[bench]]
name = "embed_bench"
harness = false
