[package]
name = "memcan-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
vendored-openssl = ["memcan-core/vendored-openssl"]

[[bin]]
name = "memcan-server"
path = "src/main.rs"

[dependencies]
memcan-core = { path = "../memcan-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
lru = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
subtle = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
