[package]
name = "mindojo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mindojo-cli"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.1", features = ["client", "transport-streamable-http-client-reqwest"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
