[package]
name = "mindojo-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
md-5 = { workspace = true }
sha2 = { workspace = true }
dotenvy = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
regex = "1"

[dev-dependencies]
mockito = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
