[package]
name = "mindojo-extract"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mindojo-extract"
path = "src/main.rs"

[dependencies]
mindojo-core = { path = "../mindojo-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
