[package]
name = "mindojo-index-standards"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mindojo-index-standards"
path = "src/main.rs"

[dependencies]
mindojo-core = { path = "../mindojo-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = "1"
