[package]
name = "mindojo-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mindojo-migrate"
path = "src/main.rs"

[dependencies]
mindojo-core = { path = "../mindojo-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
